--- a/menu.html
+++ b/menu.html
@@ -30,25 +30,25 @@
         <div class="navi">
             <div class="navi-item1" >
                 <button class="nav-button" id="startersbutton">
-                    <div class="navi-icon"><img src="/tn.svg" alt="" class="icon"></div>
+                    <div class="navi-icon"><img src="/menus/tn.svg" alt="" class="icon"></div>
                     <div class="navi-text">Topli Napitci</div>
                 </button>
             </div>
             <div class="navi-item2">
                 <button class="nav-button" id="mainsbutton">
-                    <div class="navi-icon"><img src="/alk.svg" alt="" class="icon"></div>
+                    <div class="navi-icon"><img src="/menus/alk.svg" alt="" class="icon"></div>
                     <div class="navi-text">Alk. pića</div>
                 </button>
             </div>
             <div class="navi-item3">
                 <button class="nav-button" id="dessertsbutton">
-                    <div class="navi-icon"><img src="/pivo.svg" alt="" class="icon"></div>
+                    <div class="navi-icon"><img src="/menus/pivo.svg" alt="" class="icon"></div>
                     <div class="navi-text">Pivo</div>
                 </button>
             </div>
             <div class="navi-item4">
                 <button class="nav-button" id="drinksbutton">
-                    <div class="navi-icon"><img src="/cola.svg" alt="" class="icon"></div>
+                    <div class="navi-icon"><img src="/menus/cola.svg" alt="" class="icon"></div>
                     <div class="navi-text">Bez alk. pića</div>
                 </button>
             </div>
